--- a/webapp/composer.json
+++ b/webapp/composer.json
@@ -13,7 +13,8 @@
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
         "laravelcollective/html": "^5.8",
-        "styde/seeder": "^1.0"
+        "styde/seeder": "^1.0",
+        "unisharp/laravel-filemanager": "~1.8"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
